--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Edit.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Edit.cshtml
@@ -57,9 +57,7 @@
                 <input type="submit" value="Save" />
             </div>
             <div style="float:right">
-                @if (!isNewGoal) {
-                <input type="button" value="Delete" onclick="DeleteGoal(@Model.Id, true)" />
-                }
+                <input type="button" value="Cancel" onclick="CloseGoalWindow()" />
             </div>
         </fieldset>
     }
