--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
@@ -1,6 +1,5 @@
 ﻿@model ClientPortal.Web.Models.DashboardModel
 @{
-    List<string> firstCreateGoalChartCalls = new List<string>();
     var now = DateTime.Now;
     var firstOfMonthDT = new DateTime(now.Year, now.Month, 1);
 
@@ -120,60 +119,17 @@
 </div>
 
 <!-- Goal Rows -->
-@foreach (var offersum in Model.OfferGoalSummaries)
-{
-    <div class="row">
-
-        <!-- Left -->
-        <div class="six columns">
-            <div class="panel">
-                <b>Offer: @offersum.Offer.OfferName</b><br />
-                @for (var i = 0; i < offersum.Goals.Count; i++)
-                {
-                    var goal = offersum.Goals[i];
-                    var dataLastMonthToDate = goal.ValueFor(offersum.SummaryLMTD);
-                    var dataLastMonthTotal = goal.ValueFor(offersum.SummaryLM);
-                    var dataThisMonthToDate = goal.ValueFor(offersum.SummaryMTD);
-                    var dataGoal = goal.TargetBasedOn(offersum.SummaryLM);
-                    var valueFormat = (goal.MetricId == ClientPortal.Web.Models.MetricEnum.Spend ? "C" : "N0");
-                    var goalString = goal.TargetFormattedBasedOn(offersum.SummaryLM);
-                    //var heading = offersum.Offer.OfferName.Replace("'", "");
-                    var createGoalChartCall = "CreateGoalChart('" + offersum.Offer.Offer_Id + "', '" + goal.MetricId + "', [" + dataLastMonthToDate + "," + dataLastMonthTotal + "," + dataThisMonthToDate + "," + dataGoal + "], '" + valueFormat + "', '" + goal.Culture + "', '" + goalString + "')";
-                    if (i == 0) { firstCreateGoalChartCalls.Add(createGoalChartCall); }
-
-                    <text>Custom Goal: </text>
-                    <span style="color: darkblue">@goalString</span>
-                    <a href="#" onclick="@createGoalChartCall; return false">show</a>
-                    <text>|</text>
-                    <a href="#" onclick="EditGoal(@goal.Id); return false">edit</a>
-                    <br />
-                }
-                <table>
-                    <tr>
-                        <th></th>
-                        <th>Clicks</th>
-                        <th>Leads</th>
-                        <th>Spend</th>
-                    </tr>
-                    @foreach (var rangesum in offersum.DateRangeSummaries)
-                    {
-                        <tr>
-                            <td>@rangesum.Name</td>
-                            <td>@String.Format("{0:n0}", rangesum.Clicks)</td>
-                            <td>@String.Format("{0:n0}", rangesum.Conversions)</td>
-                            <td>@rangesum.RevenueFormatted</td>
-                        </tr>
-                    }
-                </table>
-            </div>
+@{
+    List<string> firstCreateGoalChartCalls = new List<string>();
+    foreach (var offersum in Model.OfferGoalSummaries)
+    {
+        <div id="offergoals@(offersum.Offer.Offer_Id)" class="row">
+            @Html.Partial("OfferGoalsRow", offersum);
         </div>
-
-        <!-- Right -->
-        <div class="panel six columns" id="goal@(offersum.Offer.Offer_Id)ChartOuter">
-            @Html.Partial("GoalVis", offersum.Offer.Offer_Id.ToString())
-        </div>
-
-    </div>
+        if (offersum.Goals.Count > 0) {
+            firstCreateGoalChartCalls.Add(offersum.Goals[0].CreateGoalChartCall);
+        }
+    }
 }
 
 <script>
