OfferGoalsRow action; use it to refresh after update goal on dashboard

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Edit.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Edit.cshtml
@@ -4,6 +4,8 @@
     bool isNewGoal = Model.Id < 0;
 }
 
+@Html.HiddenFor(model => model.OfferId)
+
 <div id="editGoalWrapper">
     @using (Ajax.BeginForm(new AjaxOptions { Url = Url.Action("Save"), HttpMethod = "POST", InsertionMode = InsertionMode.Replace, UpdateTargetId = "editGoalWrapper", OnSuccess = "RefreshGoalsAndCloseWindow" }))
     {
