--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
@@ -172,7 +172,7 @@
 
         @foreach (var call in firstCreateGoalChartCalls)
         {
-            <text>@Html.Raw(call);</text>
+            <text>@Html.Raw(call)</text>
         }
     });
 
