--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/OfferGoalsRow.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/OfferGoalsRow.cshtml
@@ -1,4 +1,7 @@
 ﻿@model ClientPortal.Web.Models.OfferGoalSummary
+@{
+    bool includeCreateGoalChartCall = (ViewBag.IncludeCreateGoalChartCall != null);
+}
 
 <!-- Left -->
 <div class="six columns">
@@ -14,7 +17,7 @@
             var valueFormat = (goal.MetricId == ClientPortal.Web.Models.MetricEnum.Spend ? "C" : "N0");
             var goalString = goal.TargetFormattedBasedOn(Model.SummaryLM);
             //var heading = Model.Offer.OfferName.Replace("'", "");
-            goal.CreateGoalChartCall = "CreateGoalChart('" + Model.Offer.Offer_Id + "', '" + goal.MetricId + "', [" + dataLastMonthToDate + "," + dataLastMonthTotal + "," + dataThisMonthToDate + "," + dataGoal + "], '" + valueFormat + "', '" + goal.Culture + "', '" + goalString + "')";
+            goal.CreateGoalChartCall = "CreateGoalChart('" + Model.Offer.Offer_Id + "', '" + goal.MetricId + "', [" + dataLastMonthToDate + "," + dataLastMonthTotal + "," + dataThisMonthToDate + "," + dataGoal + "], '" + valueFormat + "', '" + goal.Culture + "', '" + goalString + "');";
 
             <text>Custom Goal: </text>
             <span style="color: darkblue">@goalString</span>
@@ -47,3 +50,10 @@
 <div class="panel six columns" id="goal@(Model.Offer.Offer_Id)ChartOuter">
     @Html.Partial("GoalVis", Model.Offer.Offer_Id.ToString())
 </div>
+
+@if (includeCreateGoalChartCall && Model.Goals.Count > 0)
+{
+<script>
+    @Html.Raw(Model.Goals[0].CreateGoalChartCall)
+</script>
+}
