update both old and new offergoalrows if a goal's offerid changed

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Edit.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Edit.cshtml
@@ -4,7 +4,7 @@
     bool isNewGoal = Model.Id < 0;
 }
 
-@Html.HiddenFor(model => model.OfferId)
+@Html.HiddenFor(model => model.OfferId, new { id = "OldOfferId" })
 
 <div id="editGoalWrapper">
     @using (Ajax.BeginForm(new AjaxOptions { Url = Url.Action("Save"), HttpMethod = "POST", InsertionMode = InsertionMode.Replace, UpdateTargetId = "editGoalWrapper", OnSuccess = "RefreshGoalsAndCloseWindow" }))
