--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Index.cshtml
@@ -12,7 +12,7 @@
                          {
                              InsertionMode = InsertionMode.Replace, UpdateTargetId = "windowGoal", HttpMethod = "GET",
                              OnBegin = "BeginEditGoal",
-                             OnSuccess = "EnableGoalValidation"
+                             OnSuccess = "EditGoalLoaded"
                          })
     | <a href="#" onclick="RefreshGoalsList(); return false">Refresh</a>
 </div>
