Separate DashboardGoals action & partial

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Item.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Item.cshtml
@@ -10,4 +10,5 @@
     <td>@Model.MetricId</td>
     <td>@Model.TypeId</td>
     <td>@Model.TargetFormatted</td>
+    <td>@(Model.IsMonthly ? "Monthly" : Model.StartDate + " - " + Model.EndDate)</td>
 </tr>
