--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/OfferGoalsRow.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/OfferGoalsRow.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ClientPortal.Web.Models.OfferGoalSummary
 @{
-    bool includeCreateGoalChartCall = (ViewBag.IncludeCreateGoalChartCall != null);
+    bool createGoalChart = ViewBag.CreateGoalChart ?? false;
 }
 
 <!-- Left -->
@@ -10,14 +10,23 @@
         @for (var i = 0; i < Model.Goals.Count; i++)
         {
             var goal = Model.Goals[i];
-            var dataLastMonthToDate = goal.ValueFor(Model.SummaryLMTD);
-            var dataLastMonthTotal = goal.ValueFor(Model.SummaryLM);
-            var dataThisMonthToDate = goal.ValueFor(Model.SummaryMTD);
             var dataGoal = goal.TargetBasedOn(Model.SummaryLM);
             var valueFormat = (goal.MetricId == ClientPortal.Web.Models.MetricEnum.Spend ? "C" : "N0");
             var goalString = goal.TargetFormattedBasedOn(Model.SummaryLM);
             //var heading = Model.Offer.OfferName.Replace("'", "");
-            goal.CreateGoalChartCall = "CreateGoalChart('" + Model.Offer.Offer_Id + "', '" + goal.MetricId + "', [" + dataLastMonthToDate + "," + dataLastMonthTotal + "," + dataThisMonthToDate + "," + dataGoal + "], '" + valueFormat + "', '" + goal.Culture + "', '" + goalString + "');";
+            string funcPrefix;
+            if (goal.IsMonthly)
+            {
+                var dataLastMonthToDate = goal.ValueFor(Model.SummaryLMTD);
+                var dataLastMonthTotal = goal.ValueFor(Model.SummaryLM);
+                var dataThisMonthToDate = goal.ValueFor(Model.SummaryMTD);
+                funcPrefix = "CreateMonthlyGoalChart([" + dataLastMonthToDate + "," + dataLastMonthTotal + "," + dataThisMonthToDate + "," + dataGoal + "]";
+            }
+            else
+            {
+                funcPrefix = "CreateGoalChart(['Goal'], [" + dataGoal + "]";
+            }
+            goal.CreateGoalChartCall = funcPrefix + ", '" + Model.Offer.Offer_Id + "', '" + goal.MetricId + "', '" + valueFormat + "', '" + goal.Culture + "', '" + goalString + "');";
 
             <text>Custom Goal: </text>
             <span style="color: darkblue">@goalString</span>
@@ -48,12 +57,16 @@
 
 <!-- Right -->
 <div class="panel six columns" id="goal@(Model.Offer.Offer_Id)ChartOuter">
-    @Html.Partial("GoalVis", Model.Offer.Offer_Id.ToString())
+    <div id="goal@(Model.Offer.Offer_Id)ChartHeading"></div>
+
+    <div class="chart-wrapper">
+         <div id="goal@(Model.Offer.Offer_Id)Chart"></div>
+    </div>
 </div>
 
-@if (includeCreateGoalChartCall && Model.Goals.Count > 0)
-{
 <script>
+@if (createGoalChart && Model.Goals.Count > 0)
+{
     @Html.Raw(Model.Goals[0].CreateGoalChartCall)
-</script>
 }
+</script>
