customize dashboard display for custom goals

--- a/3/ClientPortal.Web/ClientPortal.Web/Content/portal.css
+++ b/3/ClientPortal.Web/ClientPortal.Web/Content/portal.css
@@ -1,4 +1,19 @@
-﻿#windowGoal select {
+﻿.summarytable {
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+
+.summarytable th {
+    padding-left: 10px;
+    padding-right: 10px;
+    border: solid 1px;
+}
+
+.summarytable td {
+    border: solid 1px;
+}
+
+#windowGoal select {
     margin: 0 0 12px 0;
 }
 
